fixed Bottom Bar z-index

--- a/src/components/BottomBar/BottomBar.module.scss
+++ b/src/components/BottomBar/BottomBar.module.scss
@@ -3,6 +3,7 @@
   height: auto;
   top: auto;
   bottom: 0;
+  z-index: 100;
 
   display: grid;
   grid-template-columns: 1fr auto 1fr;
